--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -2,7 +2,7 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : 'Insert your appId here',
+      appId      : '1635328733222856',
       cookie     : true,
       xfbml      : true,
       version    : 'v2.8'
